[package]
name = "pp"
version = "0.1.0"
authors = ["Hajime Yamaguchi <gen.yamaguhchi0@gmail.com>"]
edition = "2018"

[dependencies]

chrono = "0.4.10"
rand = "0.6"
snow = "0.6.2"
prost = "0.6"
tonic = "0.1.1"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = "0.3"
hex = "0.4.1"
log = "0.4.0"
env_logger = "0.7.1"
async-trait = "0.1.24"
bytes = "0.5.4"

[build-dependencies]
tonic-build  = "0.1.1"
