[package]
name = "pp"
version = "0.1.0"
authors = ["Hajime Yamaguchi <gen.yamaguhchi0@gmail.com>"]
edition = "2018"

[dependencies]

chrono = "0.4"
rand = "0.6"
snow = "0.6.2"
prost = "0.6"
tonic = "0.1.1"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = "0.3"
hex = "0.4"
log = "0.4"
env_logger = "0.7.1"
async-trait = "0.1"
lazy_static = "1.4"
bytes = "0.5.4"
byteorder = "1.3.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[build-dependencies]
tonic-build  = "0.1.1"
